# mlops-zoomcamp-project-2025

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py
app/templates/: index.html
data/: test_dataset.parquet
docker/: .dockerignore  Dockerfile-app  Dockerfile-db-local  Dockerfile-mlflow  docker-compose.yaml
integration_tests/: docker-compose.localstack.yml  run_s3_integration.sh
notebook/: cardiac_arrest_model.ipynb  monitoring.ipynb
src/mlops/app/: app.py
src/mlops/data/: test_dataset.parquet  train_dataset.parquet
src/mlops/inference/: predict.py  prepare_features.py
src/mlops/monitoring/: dashboard.py  metrics_calculation.py
src/mlops/pipelines/: training_pipeline.py
src/mlops/processing/: prepare_features.py  preprocess.py
src/mlops/train/: optimize_hp.py  preprocess.py  register_model.py
tests/: model_test.py  predict_test.py  preprocess_test.py
