[project]
name = "mlops"
version = "0.1.0"
description = "MLOps DataZoomCamp Pro"
authors = [
    {name = "ju.arroyom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "prefect (>=3.4.7,<4.0.0)",
    "evidently (>=0.7.10,<0.8.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.4"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
black = "^25.1.0"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"


